[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons or icons/sound off icon.png" type="Texture" id=3]
[ext_resource path="res://sprites/background/teacher register & login bg.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/password label.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/sound on icon.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons or icons/email label.png" type="Texture" id=7]
[ext_resource path="res://Registration Login/Login/Teacher Login/TeacherLoginPage.gd" type="Script" id=8]
[ext_resource path="res://sprites/buttons or icons/login button.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons or icons/rectangular popup.png" type="Texture" id=10]
[ext_resource path="res://sprites/buttons or icons/x button.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="TeacherLoginPage" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailLabel" type="TextureRect" parent="."]
margin_left = 376.0
margin_top = 360.0
margin_right = 968.0
margin_bottom = 530.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="TextureRect" parent="."]
margin_left = 384.0
margin_top = 632.0
margin_right = 976.0
margin_bottom = 802.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 1787.72
margin_top = 13.8284
margin_right = 1908.72
margin_bottom = 107.828
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 1779.0
margin_top = 6.0
margin_right = 1923.0
margin_bottom = 114.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="."]
margin_left = 912.0
margin_top = 424.0
margin_right = 1392.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="."]
margin_left = 912.0
margin_top = 699.0
margin_right = 1392.0
margin_bottom = 787.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="."]
margin_left = 696.0
margin_top = 896.0
margin_right = 1241.0
margin_bottom = 1046.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.5
margin_top = -155.5
margin_right = 261.5
margin_bottom = 155.5
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.0
margin_top = -115.0
margin_right = 251.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 2 )
text = "Incorrect email/password. Please try again."
align = 1
valign = 1
autowrap = true

[node name="CloseButton" type="TextureButton" parent="Popup"]
margin_left = 413.0
margin_top = 33.0
margin_right = 476.0
margin_bottom = 78.0
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Popup/CloseButton" to="." method="_on_CloseButton_pressed"]
